--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2144,6 +2144,14 @@
             </intent-filter>
         </activity>
 
+        <!-- Fusion Extra info -->
+        <activity android:name="com.android.settings.fusion.extrainfo.MainActivity"
+                  android:theme="@android:style/Theme.Holo.Dialog.NoActionBar.MinWidth">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+
         <receiver android:name=".widget.SettingsAppWidgetProvider"
                 android:label="@string/gadget_title"
                 android:exported="false"
