Materialize extra info
Thanks DU

Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2154,7 +2154,7 @@
 
         <!-- Fusion Extra info -->
         <activity android:name="com.android.settings.fusion.extrainfo.MainActivity"
-                  android:theme="@android:style/Theme.Holo.Dialog.NoActionBar.MinWidth">
+                  android:theme="@android:style/Theme.Material.Light.Dialog.NoActionBar.MinWidth">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
