--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2160,6 +2160,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".notificationlight.NotificationLightSettings" />
+        <activity android:name=".notificationlight.BatteryLightSettings" />
+
         <receiver android:name=".widget.SettingsAppWidgetProvider"
                 android:label="@string/gadget_title"
                 android:exported="false"
