--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2212,6 +2212,21 @@
                 android:resource="@id/sim_settings" />
         </activity>
 
+        <!-- Fusion Main Settings -->
+        <activity android:name="Settings$MainSettingsActivity"
+            android:label="@string/fusion_settings_title"
+            android:taskAffinity="">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.fusion.MainSettings" />
+        </activity>
+
+        <activity
+             android:name=".fusion.MainSettings" />
+
         <provider
             android:name=".search.SettingsSearchIndexablesProvider"
             android:authorities="com.android.settings"
