--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -110,7 +110,7 @@
         <!-- Only system/su can open this activity -->
         <!-- This activity will then call the MultitaskSuRequestActivity to create a new task stack -->
         <activity
-            android:name=".fusion.superuser.RequestActivity"
+            android:name="com.koushikdutta.superuser.RequestActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/superuser"
             android:launchMode="singleTask"
@@ -123,7 +123,7 @@
         <!-- This is activity is started in multiuser mode when the user invoking su -->
         <!-- is not the device owner (user id 0). -->
         <activity
-            android:name=".fusion.superuser.NotifyActivity"
+            android:name="com.koushikdutta.superuser.NotifyActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/superuser"
             android:launchMode="singleTask"
@@ -135,7 +135,7 @@
 
         <!-- Multiple instances of this activity can be running for multiple su requests -->
         <activity
-            android:name=".fusion.superuser.MultitaskSuRequestActivity"
+            android:name="com.koushikdutta.superuser.MultitaskSuRequestActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
             android:exported="false"
@@ -145,7 +145,7 @@
             android:theme="@style/RequestThemeDark" />
 
         <receiver
-            android:name=".fusion.superuser.SuReceiver"
+            android:name="com.koushikdutta.superuser.SuReceiver"
             android:permission="android.permission.REPORT_SUPERUSER" />
 
         <!-- Settings -->
