--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2199,6 +2199,8 @@
 
         <activity android:name=".fusion.WakeLockBlocker" />
 
+        <activity android:name=".fusion.DownloadCenter" />
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.android.settings.files"
