HeadsUp: add timeout option (1/2) & HeadsUp: add timeout option (2/2)
Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2208,6 +2208,8 @@
 
         <activity android:name=".fusion.DownloadCenter" />
 
+        <activity android:name=".fusion.HeadsUpSettings" />
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.android.settings.files"
